# datatable

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish_package.yml
ci/: audit.py  ext.py
ci/xbuild/: compiler.py  wheel.py
src/core/python/: obj.cc
src/datatable/: __init__.py
tests/: test-dt.py
